--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,10 @@ input {
 img {
   width: 20px;
 }
+
+.work{
+    background-color: #0000FF;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
